--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -311,3 +311,10 @@ H3-Amplification {
   font-weight: normal;
   line-height: 12px;
 }
+
+.XG1M {
+  font-family: "dinot-medium";
+  font-size: 8px;
+  font-weight: normal;
+  line-height: 12px;
+}
