--- a/frontend/javascripts/app/views/directives/chart-well-switch.html
+++ b/frontend/javascripts/app/views/directives/chart-well-switch.html
@@ -26,18 +26,31 @@
         </th>
       </tr>
       <tr ng-repeat="row in rows">
-        <td class="row-header G2" ng-mousedown="dragStart($event, 'row', row.index)" ng-mousemove="dragged($event, 'row', row.index)" ng-mouseup="dragStop($event, 'row', row.index)" ng-class="{dragged: row.selected}">
+        <td 
+          class="row-header G2" 
+          ng-mousedown="dragStart($event, 'row', row.index)" 
+          ng-mousemove="dragged($event, 'row', row.index)" 
+          ng-mouseup="dragStop($event, 'row', row.index)" 
+          ng-class="{dragged: row.selected}">
           {{ row.index==0? 'A' : 'B' }}
         </td>
-        <td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart($event, 'well', i)" ng-mousemove="dragged($event, 'well', i)" ng-mouseup="dragStop($event, 'well', i)" ng-class="{selected: well.selected, active: well.active}" ng-style="getWellStyle(row, col, well, i)">
+        <td 
+          ng-repeat="col in columns" 
+          class="well-switch" 
+          ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" 
+          ng-mousedown="dragStart($event, 'well', i)" 
+          ng-mousemove="dragged($event, 'well', i)" 
+          ng-mouseup="dragStop($event, 'well', i)" 
+          ng-class="{selected: well.selected, active: well.active}" 
+          ng-style="getWellStyle(row, col, well, i)">
           <div class="well-switch-container B1-Amplification" style="height: 100%; background: inherit;" ng-style="getWellContainerStyle(row, col, well, i)">
             <div class="well-switch-bar-container">
               <div class="well-switch-bar" ng-style="getStyleForWellBar(row, col, well, i)">
               </div>
             </div>
             <div class="ct-cq-container">
-              <div> Cq <strong class="value">{{ displayCt(well.ct[0]) }}</strong> </div>
-              <div> Cq <strong class="value">{{ displayCt(well.ct[1]) }}</strong> </div>
+              <div> C<small>q</small> <strong class="value">{{ displayCt(well.ct[0]) }}</strong> </div>
+              <div> C<small>q</small> <strong class="value">{{ displayCt(well.ct[1]) }}</strong> </div>
             </div>
           </div>
         </td>
