Fixed US100 for plate layout

--- a/frontend/stylesheets/plate-layout.scss
+++ b/frontend/stylesheets/plate-layout.scss
@@ -264,10 +264,13 @@ li {
     border-right: 1px solid #c5c5c5;
   }
 
-  th, td {
+  th, td{
     border-left: 1px solid #c5c5c5;
-    border-bottom: 1px solid #c5c5c5;
     border-top: 1px solid #c5c5c5;
+  }
+
+  tr:last-child td{
+    border-bottom: 1px solid #c5c5c5;
   }
 
   .col-header {
