Improve Amplification Chart

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -242,11 +242,11 @@ limitations under the License.
                 </span>
               </td>
               <td class="B2-Amplification type-td">
-                <span class="B2-Amplification type-span" style="width: 20px; height: 20px;" ng-if="types[well_item.well_num - 1]">
-                  <img src="/images/ring_s.svg" ng-if="types[well_item.well_num - 1] == 'standard'">
-                  <img src="/images/ring_plus.svg" ng-if="types[well_item.well_num - 1] == 'positive_control'">
-                  <img src="/images/ring_neg.svg" ng-if="types[well_item.well_num - 1] == 'negative_control'">
-                  <img src="/images/ring_u.svg" ng-if="types[well_item.well_num - 1] == 'unknown'">
+                <span class="B2-Amplification type-span" style="width: 20px; height: 20px;" ng-if="types[$index]">
+                  <img src="/images/ring_s.svg" ng-if="types[$index] == 'standard'">
+                  <img src="/images/ring_plus.svg" ng-if="types[$index] == 'positive_control'">
+                  <img src="/images/ring_neg.svg" ng-if="types[$index] == 'negative_control'">
+                  <img src="/images/ring_u.svg" ng-if="types[$index] == 'unknown'">
                 </span>
               </td>
               <td class="B2-Amplification" style="text-align: left;">
