--- a/frontend/javascripts/app/views/experiment/run-experiment.html
+++ b/frontend/javascripts/app/views/experiment/run-experiment.html
@@ -26,7 +26,7 @@
           </div>
         </div>
       </header-status>
-      <div class="chart-screens-container" style="flex-grow: 1; position: relative; overflow-x:auto; overflow-y:hidden;">
+      <div class="chart-screens-container" style="flex-grow: 1; position: relative; overflow:auto;">
         <div ng-show="chart === 'amplification'" style="position:absolute; width: 100%; height: 100%; min-width: 1368px; min-height: 668px;" ng-include src="'app/views/experiment/amplification-chart.html'">
         </div>
         <div ng-show="chart === 'standard-curve'" style="position:absolute; width: 100%; height: 100%; min-width: 1368px; min-height: 668px;" ng-include src="'app/views/experiment/standard-curve.html'">
