[US98] Improve Well layout page

--- a/frontend/javascripts/app/views/directives/menu-overlay.html
+++ b/frontend/javascripts/app/views/directives/menu-overlay.html
@@ -17,7 +17,7 @@
     limitations under the License.
 -->
 <div class="menu-overlay-layout" ng-class="{'sidemenu-open': sideMenuOpen, 'submenu-open': sideMenuOptionsOpen}">
-  <div id="sidemenu" class="sidemenu" escape-menu ng-show="sideMenuOpen">
+  <div id="sidemenu" class="sidemenu" ng-show="sideMenuOpen">
     <left-menu></left-menu>
   </div>
   <div class="page-wrapper" >
