--- a/frontend/javascripts/app/views/experiment/left-menu.html
+++ b/frontend/javascripts/app/views/experiment/left-menu.html
@@ -23,7 +23,7 @@
       <span class="XH3M" style="vertical-align: middle;">Back To Home</span>
     </div>
     <div class="close-container"><span class="close-side-menu" toggle-sidemenu>
-      <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 5 5"><title>Close</title><rect x="2.25" y="-0.79" width="0.5" height="6.57" transform="translate(-1.04 2.5) rotate(-45)"/><rect x="-0.79" y="2.25" width="6.57" height="0.5" transform="translate(-1.04 2.5) rotate(-45)"/></svg>
+      <img src="/images/x_k_white.svg">
     </span></div>
   </div>
 
