--- a/frontend/stylesheets/directives/menu-overlay.css.scss
+++ b/frontend/stylesheets/directives/menu-overlay.css.scss
@@ -40,7 +40,7 @@ $sidemenu_width: 360px;
       .close-side-menu {
         cursor: pointer;
         @extend .common;
-        svg {
+        img {
           width: 15px;
           margin-top: 4px;
           rect{
