--- a/frontend/stylesheets/plate-layout.scss
+++ b/frontend/stylesheets/plate-layout.scss
@@ -34,7 +34,34 @@
         height: 40px;
         border-right: none;
         outline: none;
-        color: #888;
+        color: #111;
+
+        &.error{
+          border-bottom-color: #E02127;
+        }
+
+        &.blank{
+          font-style: italic;
+        }
+      }
+
+      .error-field{
+        font-family: "dinot-medium";
+        font-size: 10px;
+        line-height: 12px;          
+        color: #E02127;
+        display: block;
+        padding: 4px 0;
+        height: 20px;
+      }
+
+      .error-field-icon{
+        width: 10px;
+        height: 10px;
+        display: block;
+        position: absolute;
+        right: 0;
+        bottom: 25px;                
       }
     }
   }
@@ -455,12 +482,67 @@ li {
     box-shadow: 0 2px 3px #aaa;
     background: #fff;
     padding: 0 15px;
-    z-index: 1000;
+    z-index: 10;
+    overflow: hidden;
 
     &::after{
         content: ' ';
         clear: both;
     }    
+
+    .tip-banner{
+      top: 50%;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%) translateY(70%);
+      height: 40px;
+      background: #08a1da;
+      border-radius: 3px;
+      color: #fff;
+      padding: 0 10px 0 15px;      
+      z-index: 10;
+      transition-timing-function: ease-in;
+      transition: 0.5s;
+      opacity: 0;
+
+      &.banner-is-shown{
+        transform: translateX(-50%) translateY(-50%);
+        transition: 0.5s;
+        transition-timing-function: ease-out;       
+        opacity: 1;
+      }
+
+      span{
+        line-height: 40px;
+        vertical-align: middle;
+        display: inline-block;        
+      }
+
+      button{
+        background: transparent;
+        border: 1px solid #fff;
+        vertical-align: middle;
+        padding: 5px 10px;
+        border-radius: 2px;
+        margin: 0 10px;
+
+        &:hover{
+          background: #fff;
+          color: #08a1da;          
+        }
+      }
+
+      label{
+        width: 12px;
+        height: 12px;
+        margin: 0;
+        cursor: pointer;
+        vertical-align: middle;
+        img{
+          vertical-align: top;
+        }
+      }
+    }
 }
 
 .experiment-info{
