--- a/frontend/stylesheets/plate-layout.scss
+++ b/frontend/stylesheets/plate-layout.scss
@@ -63,6 +63,16 @@
         right: 0;
         bottom: 25px;                
       }
+
+      .quantity-helper{
+        font-family: "dinot-regular";
+        display: block;
+        position: absolute;
+        right: 0px;
+        bottom: 21px;
+        font-size: 10px;
+        color: #888;
+      }
     }
   }
 
